[gd_scene load_steps=2 format=3 uid="uid://weapon_atm_scene"]

[ext_resource type="Script" path="res://scripts/weapon_atm.gd" id="1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(80, 80)

[node name="WeaponATM" type="Area2D"]
script = ExtResource("1")
collision_layer = 8
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="Background" type="ColorRect" parent="."]
offset_left = -32.0
offset_top = -48.0
offset_right = 32.0
offset_bottom = 48.0
color = Color(0.6, 0.4, 0.2, 1)

[node name="TierLabel" type="Label" parent="."]
offset_left = -30.0
offset_top = -42.0
offset_right = 30.0
offset_bottom = -22.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "BRONZE ATM"
horizontal_alignment = 1

[node name="PriceLabel" type="Label" parent="."]
offset_left = -30.0
offset_top = 20.0
offset_right = 30.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "FREE"
horizontal_alignment = 1
visible = false

[node name="InteractionPrompt" type="Label" parent="."]
offset_left = -40.0
offset_top = -70.0
offset_right = 40.0
offset_bottom = -50.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 16
text = "Press E"
horizontal_alignment = 1
visible = false
